--- a/personal_website/package.json
+++ b/personal_website/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://adamclear.github.io/adamclear_dev",
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --config webpack.config.js --hot",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "webpack --mode production --config webpack.config.js --hot"
   },
   "eslintConfig": {
@@ -40,6 +43,7 @@
     "babel-loader": "^9.1.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
     "immutable": "^4.2.4",
