--- a/personal_website/package.json
+++ b/personal_website/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://adamclear.github.io/adamclear_dev",
+  "homepage": "http://adamclear.github.io/adamclear_dev",
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
